[tool.poetry]
name = "buildingdatabases"
version = "0.1.0"
description = "Tutorial code - Part 2 / Structs & Storage"
authors = ["Tim Armstrong"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
lmdb = "1.2"
black = "^21.6b0"
Twisted = "^21.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
